--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
+ * Theme Name: Svetlana Fus
+ * Description: Wordpress Theme for Svetlana FUs
+ * Author: Vsevolod Kurochka
 */
