--- a/templates/base.twig
+++ b/templates/base.twig
@@ -7,6 +7,30 @@
 {% endblock %}
 
 	<body class="{{body_class}}" data-template="base.twig">
+		<div class="fixed">
+      <div class="nav" id="js-navigation">
+        <div class="nav__container container">
+          <div class="nav__row row">
+            <div class="nav__logo col-8 col-md-3">
+              <button class="hamburger hamburger_effect-2" type="button" id="js-nav-hamburger"><span class="hamburger__lines"><span></span><span></span><span></span><span></span></span>
+              </button>
+              <div class="nav__logo-content">
+              	{{logo}}
+              </div>
+            </div>
+            <nav class="nav__menu col-12 col-md-6" id="js-navigation-menu"><ul>
+              {% include "menu.twig" with {'menu': menu.get_items} %}
+            </nav>
+            <div class="nav__addition col-4 col-md-3" id="js-nav-addition">
+              <div class="nav__addition-toggle" id="js-nav-toggle"><span></span><span></span><span></span>
+              </div>
+              <div class="nav__addition-links js-nav-links"><a class="nav__addition-link">+99 999 999 99</a><a class="nav__addition-link nav__addition-link_hidden">+99 999 999 99</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 		<header class="header" >
 			{% block header %}
 				<div class="wrapper">
