--- a/static/src/sass/components/button/_button.sass
+++ b/static/src/sass/components/button/_button.sass
@@ -9,9 +9,10 @@
 	+btn-size($btn-default-padding, $btn-default-size)
 
 	border: none
-	border-radius: 0
+	border-radius: 23px
 	
 	font-weight: bold
+	font-family: $bold
 	text-decoration: none
 	line-height: 1.4
 	
@@ -26,7 +27,7 @@
 	@extend %btn-placeholder
 
 	&_lg
-			+btn-size($btn-large-padding, $btn-large-size)
+		+btn-size($btn-large-padding, $btn-large-size)
 
 	&_shadow
 		&-brand-1
@@ -57,4 +58,4 @@
 	//-
 	//- Iteration button border-color
 	//-
-	//+btn-border-iteration
+	+btn-border-iteration
