--- a/templates/base.twig
+++ b/templates/base.twig
@@ -11,58 +11,45 @@
       <div class="nav" id="js-navigation">
         <div class="nav__container container">
           <div class="nav__row row">
-            <div class="nav__logo col-8 col-md-3">
+            <div class="nav__logo col-8 col-md-2">
               <button class="hamburger hamburger_effect-2" type="button" id="js-nav-hamburger"><span class="hamburger__lines"><span></span><span></span><span></span><span></span></span>
               </button>
               <div class="nav__logo-content">
               	{{logo}}
               </div>
             </div>
-            <nav class="nav__menu col-12 col-md-6" id="js-navigation-menu"><ul>
+            <nav class="nav__menu col-12 col-md-5" id="js-navigation-menu"><ul>
               {% include "menu.twig" with {'menu': menu.get_items} %}
+              
             </nav>
-            <div class="nav__addition col-4 col-md-3" id="js-nav-addition">
+            <div class="nav__addition col-4 col-md-5" id="js-nav-addition">
               <div class="nav__addition-toggle" id="js-nav-toggle"><span></span><span></span><span></span>
               </div>
-              <div class="nav__addition-links js-nav-links"><a class="nav__addition-link">+99 999 999 99</a><a class="nav__addition-link nav__addition-link_hidden">+99 999 999 99</a>
+              <div class="nav__addition-links js-nav-links">
+              	<div class="nav__addition-phones">
+              		{% for phone in options.telephones %}
+              			<a class="nav__addition-link" href="tel: {{phone.phone}}">{{phone.phone}}</a>
+              		{% endfor %}
+              	</div>
+              	<a href="#" class="btn btn_border-brand-1 effect effect_bounce-top nav__addition-btn">Проконсультироваться бесплатно</a>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
-		<header class="header" >
-			{% block header %}
-				<div class="wrapper">
-					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
-					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
-						{% include "menu.twig" with {'menu': menu.get_items} %}
-					</nav><!-- #nav -->
-				</div>
+    <main class="site">
+
+			{% block content %}
+				Sorry, no content
 			{% endblock %}
-		</header>
 
-		<section id="content" role="main" class="content-wrapper">
-			{% if title %}<h1>{{title}}</h1>{% endif %}
-			<div class="wrapper {{sidebar_class}}">
-				{% block content %}
-					Sorry, no content
-				{% endblock %}
-			</div>
-			{% if sidebar %}
-				<aside class="layout-sidebar">
-					{{sidebar}}
-				</aside>
-			{% endif %}
-		</section>
-
-		{% block footer %}
-			<footer id="footer">
-				{% include 'footer.twig' %}
-			</footer>
-			{{ function('wp_footer') }}
-		{% endblock %}
+			{% block footer %}
+				<footer>
+					{% include 'footer.twig' %}
+				</footer>
+				{{ function('wp_footer') }}
+			{% endblock %}
+		</main>
 	</body>
 </html>
