--- a/templates/template-front-page.twig
+++ b/templates/template-front-page.twig
@@ -1,7 +1,5 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	<div class="content-wrapper">
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores odit, eos ducimus delectus eveniet magni eaque nemo optio accusamus iure, doloremque ipsum ut ullam facilis error! Repudiandae natus quod nostrum.
-	</div><!-- /content-wrapper -->
+	{% include 'front/section-1.twig' %}
 {% endblock %}
