--- a/static/src/sass/helpers/variables/_var-colors.sass
+++ b/static/src/sass/helpers/variables/_var-colors.sass
@@ -14,10 +14,10 @@ $color-black: #000
 $color-white: #fff
 
 /// Color Branding One
-$color-brand-1: #28a5f5
+$color-brand-1: #d22194
 
 /// Color Branding Two
-$color-brand-2: #f00
+$color-brand-2: #702283
 
 /// Color Success
 $color-success: #5cb85c
