--- a/static/src/sass/layouts/nav/_nav-menu-item.sass
+++ b/static/src/sass/layouts/nav/_nav-menu-item.sass
@@ -1,6 +1,10 @@
 +b('nav')
 	+e("menu")
-		+ee("item")
+	
+		li
+			list-style: none
+
+		+ee('item')
 			display: block
 
 			+transition()
@@ -10,6 +14,7 @@
 				position: relative
 				color: inherit
 				text-decoration: none
+				font-family: $bold
 
 			+max(md)
 				margin-bottom: 10px
@@ -29,5 +34,5 @@
 				a
 					padding-top: 7.5px
 					padding-bottom: 7.5px
-
+					font-size: 14px
 					+linkEffect3
