--- a/static/src/sass/layouts/nav/_nav.sass
+++ b/static/src/sass/layouts/nav/_nav.sass
@@ -20,4 +20,6 @@
 			flex-basis: 100%
 
 	+min(md)
-		padding: 25px 0
+		+padding-y(15px)
+		background-color: transparentize($color-white, 0.2)
+		box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15)			
