--- a/templates/menu.twig
+++ b/templates/menu.twig
@@ -1,7 +1,7 @@
 {% if menu %}
 	<ul>
 	{% for item in menu %}
-		<li class="{{ item.classes | join(' ') }}">
+		<li class="nav__menu-item {{ item.classes | join(' ') }}">
 			<a target="{{ item.target }}" href="{{ item.link }}">{{ item.title }}</a>
 			{% include "menu.twig" with {'menu': item.get_children} %}
 		</li>
