--- a/templates/front/section-1.twig
+++ b/templates/front/section-1.twig
@@ -1,10 +1,15 @@
 <header class="header">
 	<div class="container">
-		<div class="row">
+		<div class="row header__row">
 			<div class="col-12 col-sm-5">
-				<img src="{{TimberImage(post.get_field('section_1_image')).src}}" alt="">
+				<div class="header__image">
+					<img src="{{TimberImage(post.get_field('section_1_image')).src}}" alt="">
+				</div>
 			</div>
-			<div class="col-12 col-sm-7"></div>
+			<div class="col-12 col-sm-7">
+				<h1 class="header__title color-brand-2">{{post.get_field('section_1_title')}}</h1>
+				<div class="header__content">{{post.get_field('section_1_text')}}</div>
+			</div>
 		</div>
 	</div>
 </header>
