End working with header title * contnet

--- a/static/src/sass/layouts/header/_header.sass
+++ b/static/src/sass/layouts/header/_header.sass
@@ -1,22 +1,25 @@
 $header-title: ('default': 30px, 'xs': 45px, 'sm': 55px, 'md': 65px, 'lg': 75px)
 
-$header-content: ('default': 20px, 'xs': 22px, 'sm': 24px, 'md': 28px)
+$header-text: ('default': 20px, 'xs': 22px, 'sm': 24px, 'md': 28px)
 
 +b("header")
 	+relative
-	
-	
-
-	+e('row')
-		+min(sm)
-			align-items: center
 
 	+e('title')
 		line-height: 1.1
 		font-family: $bold
 		+fs-simple($header-title)
-
+	
 	+e('content')
+		+min(md)
+			margin-top: 75px
+
+	+e('text')
 		line-height: 1.2
 		margin-top: 30px
-		+fs-simple($header-content)
+		+fs-simple($header-text)
+
+	+e('row')
+		+m('reverse')
+			+min(md)
+				flex-direction: row-reverse
