--- a/templates/front/section-1.twig
+++ b/templates/front/section-1.twig
@@ -13,7 +13,11 @@
 					<img src="{{TimberImage(post.get_field('section_1_image')).src}}" alt="">
 				</div>
 			</div>
-
+		</div>
+		<div class="row">
+			<div class="col-12 col-sm-10">
+				{{ function('banner_form("Title", "[contact-form-7 id="29" title="Контактная форма 1"]")') }}
+			</div>
 		</div>
 	</div>
 </header>
