--- a/static/src/sass/components/button/_button.sass
+++ b/static/src/sass/components/button/_button.sass
@@ -31,10 +31,10 @@
 
 	&_shadow
 		&-brand-1
-			box-shadow: 0 3px 8px 1px transparentize($color-brand-1, 0.5)
+			box-shadow: 0px 10px 18px 0px transparentize($color-brand-1, 0.5)
 
-		&:hover
-			box-shadow: none
+			&:hover
+				box-shadow: none
 
 	&_nav
 		background-color: $color-responsive-menu-light
