--- a/static/src/sass/components/form/_form-helpers.sass
+++ b/static/src/sass/components/form/_form-helpers.sass
@@ -1,9 +1,8 @@
 $themeFormDesign: "new"
 
 =input-default
-	display: block
+	display: inline-block
 	padding: 15px
-	width: 100%
 	max-width: 100%
 	color: #000
 	text-align: left
