--- a/static/src/sass/layouts/header/_header.sass
+++ b/static/src/sass/layouts/header/_header.sass
@@ -42,3 +42,11 @@ $header-text: ('default': 20px, 'xs': 22px, 'sm': 24px, 'md': 28px)
 
 		+min(sm)
 			+absolute(25px, 110px)
+
+	+e('banner')
+
+		+ee('row')
+
+			+min(sm)
+				margin-top: -215px
+				justify-content: center
