--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -45,6 +45,9 @@
 // Title
 @import 'components/title/title'
 
+// Title
+@import 'components/banner-form'
+
 // hamburger
 @import 'components/hamburger/nav-hamburger'
 @import 'components/hamburger/nav-hamburger-effect-1'
