--- a/static/src/sass/components/form/_form.sass
+++ b/static/src/sass/components/form/_form.sass
@@ -1,4 +1,4 @@
-+b("form")
++b("wpcf7")
 	$self: &
 
 	width: 100%
@@ -28,47 +28,21 @@
 				+size(100%)
 
 
-	@if $themeFormDesign == "new"
-		&__control
-			+input-default
+	input:not([type="submit"])
+		+input-default
+		border-radius: 30px
+		border: 1px solid #ddd
 
-			border: none
+		+min(sm)
+			height: 100%
 
-		&__line
-			position: absolute
-			left: 0
-			bottom: 0
+		&:focus
+			border-color: $color-brand-1
 
-			+size(0, 1px)
+			+placeholder
+				color: transparent
 
-			background-color: $color-brand-1
-
-			+transition
-
-		input:focus + &__line
-			width: 100%
-
-		&__row_line
-			&:before
-				+pseudo
-
-				left: 0
-				bottom: 0
-				height: 1px
-				width: 100%
-				background-color: $color-brand-1
-
-		+min(xs)
-			&__row
-				margin-top: 30px
-	@else
-		&__control
-			+input-default
-
-			border: 1px solid #ddd
-
-			&:focus
-				border-color: $color-brand-1
-
-				+placeholder
-					color: transparent
+	button[type="submit"]
+		width: 100%
+		border-radius: 30px
+		word-break: break-all
