--- a/templates/front/section-1.twig
+++ b/templates/front/section-1.twig
@@ -14,9 +14,9 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row header__banner-row">
 			<div class="col-12 col-sm-10">
-				{{ function('banner_form("Title", "[contact-form-7 id="29" title="Контактная форма 1"]")') }}
+				{{ function('banner_form', post.get_field('section_1_form_title'), '[contact-form-7 id="29" title="Контактная форма 1" button-hidden-text="Проконсультироваться бесплатно"]')}}
 			</div>
 		</div>
 	</div>
