--- a/static/src/sass/layouts/header/_header.sass
+++ b/static/src/sass/layouts/header/_header.sass
@@ -4,6 +4,9 @@ $header-text: ('default': 20px, 'xs': 22px, 'sm': 24px, 'md': 28px)
 
 +b("header")
 	+relative
+	
+	+m('greeting')
+		padding-bottom: 45px
 
 	+e('title')
 		line-height: 1.1
