--- a/templates/front/section-1.twig
+++ b/templates/front/section-1.twig
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header header_greeting">
 	<div class="container">
 		<div class="row header__row header__row_reverse">
 			<div class="col-12 col-md-7">
