--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -69,7 +69,7 @@
 @import 'layouts/footer/footer'
 
 // Section
-@import 'sections/*'
+@import 'sections/**/*'
 
 //@import 'vendor/fontawesome/font-awesome'
 //@import 'vendor/tabs/tabs'
