--- a/static/src/sass/components/form/_form.sass
+++ b/static/src/sass/components/form/_form.sass
@@ -30,6 +30,7 @@
 
 	input:not([type="submit"])
 		+input-default
+		width: 100%
 		border-radius: 30px
 		border: 1px solid #ddd
 
@@ -43,6 +44,10 @@
 				color: transparent
 
 	button[type="submit"]
+		display: block
 		width: 100%
 		border-radius: 30px
 		word-break: break-all
+
+	.wpcf7-form-control-wrap
+		display: block
