--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -23,7 +23,6 @@
 @import 'grid/*'
 
 @import 'utilities/colors'
-@import 'utilities/background'
 @import 'utilities/offsets'
 @import 'utilities/text'
 
@@ -45,8 +44,11 @@
 // Title
 @import 'components/title/title'
 
-// Title
+// Banner Form
 @import 'components/banner-form'
+
+// background
+@import 'components/background'
 
 // hamburger
 @import 'components/hamburger/nav-hamburger'
