--- a/templates/template-front-page.twig
+++ b/templates/template-front-page.twig
@@ -3,4 +3,5 @@
 {% block content %}
 	{% include 'front/section-1.twig' %}
 	{% include 'front/section-2.twig' %}
+	{% include 'front/section-3.twig' %}
 {% endblock %}
