--- a/static/src/sass/layouts/nav/_nav-addition.sass
+++ b/static/src/sass/layouts/nav/_nav-addition.sass
@@ -38,7 +38,7 @@
 				+size(5px)
 				margin-right: 5px
 				border-radius: 100%
-				background-color: $color-white
+				background-color: $color-brand-1
 
 				&:last-child
 					margin-right: 0
