--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -50,6 +50,8 @@
 // background
 @import 'components/background'
 
+@import 'components/icon'
+
 // hamburger
 @import 'components/hamburger/nav-hamburger'
 @import 'components/hamburger/nav-hamburger-effect-1'
