--- a/templates/template-front-page.twig
+++ b/templates/template-front-page.twig
@@ -4,4 +4,6 @@
 	{% include 'front/section-1.twig' %}
 	{% include 'front/section-2.twig' %}
 	{% include 'front/section-3.twig' %}
+	{% include 'front/section-4.twig' %}
+	{% include 'front/section-5.twig' %}
 {% endblock %}
