--- a/templates/template-front-page.twig
+++ b/templates/template-front-page.twig
@@ -6,4 +6,6 @@
 	{% include 'front/section-3.twig' %}
 	{% include 'front/section-4.twig' %}
 	{% include 'front/section-5.twig' %}
+	{% include 'front/section-6.twig' %}
+	{% include 'front/section-7.twig' %}
 {% endblock %}
