--- a/static/src/sass/sections/front/_health.sass
+++ b/static/src/sass/sections/front/_health.sass
@@ -1,10 +1,15 @@
 +b('health')
 
+	+padding-y(45px)
+
 	+e('header')
 		margin-bottom: 30px
 
 		+min(md)
 			margin-bottom: 45px
+
+		+min(lg)
+			margin-bottom: 75px
 
 	+e('row')
 
