Add About, ration section

--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -52,6 +52,8 @@
 
 @import 'components/icon'
 
+@import 'components/ration'
+
 // hamburger
 @import 'components/hamburger/nav-hamburger'
 @import 'components/hamburger/nav-hamburger-effect-1'
