--- a/templates/template-front-page.twig
+++ b/templates/template-front-page.twig
@@ -8,4 +8,7 @@
 	{% include 'front/section-5.twig' %}
 	{% include 'front/section-6.twig' %}
 	{% include 'front/section-7.twig' %}
+	{% include 'front/section-8.twig' %}
+	{% include 'front/section-9.twig' %}
+	{% include 'front/section-10.twig' %}
 {% endblock %}
