End section 10, add footer

--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -53,6 +53,7 @@
 @import 'components/icon'
 
 @import 'components/ration'
+@import 'components/benefit'
 
 // hamburger
 @import 'components/hamburger/nav-hamburger'
