--- a/templates/base.twig
+++ b/templates/base.twig
@@ -45,7 +45,7 @@
 			{% endblock %}
 
 			{% block footer %}
-				<footer>
+				<footer class="footer">
 					{% include 'footer.twig' %}
 				</footer>
 				{{ function('wp_footer') }}
