--- a/templates/front/section-9.twig
+++ b/templates/front/section-9.twig
@@ -8,7 +8,7 @@
 			</div>
 			<div class="col-12 col-sm-6">
 				<h3 class="title-lg about__title">{{post.get_field('section_9_title')}}</h3>
-				<p class="title-sm about__subtitle">{{post.get_field('section_9_subtitle')}}</p>
+				<p class="title-sm about__subtitle">{{post.get_field('section_9_name')}}</p>
 				<div class="about__content">
 					{{post.get_field('section_9_facts')}}
 				</div>
