--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -55,6 +55,8 @@
 @import 'components/ration'
 @import 'components/benefit'
 
+@import 'components/social'
+
 // hamburger
 @import 'components/hamburger/nav-hamburger'
 @import 'components/hamburger/nav-hamburger-effect-1'
