--- a/templates/footer.twig
+++ b/templates/footer.twig
@@ -1,18 +1,25 @@
 <div class="container footer__container">
-	<div class="row">
+	<div class="row footer__row">
 		<div class="col-12 col-sm-4">
 			<img src={{options.footer_logo}} class="footer__logo" alt="Footer logo">
-			<ul class="footer__social">
+			<ul class="social footer__social">
 				{% for social in options.social %}
-					<li>
-						<a href={{social.link}}>
-							<img src={{social.icon}} alt="Social link">
+					<li class="social__item">
+						<a href={{social.link}} class="social__link">
+							<img class="social__image" src={{social.icon}} alt="Social link">
 						</a>
 					</li>
 				{% endfor %}
 			</ul>
 		</div>
-		<div class="col-12 col-sm-4"></div>
+		<div class="col-12 col-sm-4">
+			<div class="footer__phones">
+				{% for phone in options.telephones %}
+					<a class="footer__phone" href="tel: {{phone.phone}}">{{phone.phone}}</a>
+				{% endfor %}
+			</div>
+			<div class="footer__place">{{options.address}}</div>
+		</div>
 		<div class="col-12 col-sm-4"></div>
 	</div>
 </div>
