--- a/static/src/sass/layouts/footer/_footer.sass
+++ b/static/src/sass/layouts/footer/_footer.sass
@@ -1,2 +1,28 @@
 +b('footer')
-	font-size: 12px
+	+padding-y(30px)
+	font-size: 16px
+	color: #828282
+	background-color: #191919
+	font-family: $bold
+
+	a
+		color: inherit
+		text-decoration: none
+
+	+e('logo')
+		width: 150px
+		margin-bottom: 15px
+
+	+e('phones')
+		margin-bottom: 10px
+
+	+e('phone')
+
+		+transition
+
+		&:hover
+			color: $color-brand-1
+
+	+e('row')
+		+min(sm)
+			align-items: center
