--- a/static/src/sass/components/_banner-form.sass
+++ b/static/src/sass/components/_banner-form.sass
@@ -12,7 +12,7 @@ $shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15)
 		background-color: transparentize(#fff, 0.8)
 
 	+min($sm)
-		padding: 45px 30px
+		padding: 75px 45px 45px
 
 	&__tag
 		+absolute(-10px, -10px)
