--- a/static/src/sass/components/title/_title.sass
+++ b/static/src/sass/components/title/_title.sass
@@ -19,13 +19,13 @@
 		font-weight: normal
 
 		+min($sm)
-			font-size: 30px
+			font-size: 25px
 
 		+min($md)
-			font-size: 32px
+			font-size: 28px
 
 		+min($lg)
-			font-size: 36px
+			font-size: 30px
 
 	&-md
 		font-size: 22px
@@ -58,3 +58,9 @@
 
 		+min($lg)
 			font-size: 50px
+
+	&-section
+		margin-bottom: 45px
+
+		+min($lg)
+			margin-bottom: 60px
