--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -71,12 +71,26 @@
 // background
 @import 'components/background'
 
+// Icon
 @import 'components/icon'
 
+// Ration
 @import 'components/ration'
+
+// Choose ration
+@import 'components/choose-ration'
+
+// Benefit
 @import 'components/benefit'
 
+// Social
 @import 'components/social'
+
+// Variant
+@import 'components/variant'
+
+// Dish
+@import 'components/dish'
 
 // // hamburger
 @import 'components/hamburger/nav-hamburger'
@@ -106,6 +120,17 @@
 @import 'sections/front/secret'
 @import 'sections/front/specific'
 @import 'sections/front/target'
+
+// Single rations
+@import 'sections/single-ration/ration-menu'
+@import 'sections/single-ration/ration-features'
+@import 'sections/single-ration/ration-variants'
+@import 'sections/single-ration/ration-contact'
+
+@import 'sections/dishes/dishes-info'
+@import 'sections/dishes/dishes-prices'
+
+@import 'sections/business-lunch/business-prices'
 
 // //@import 'vendor/fontawesome/font-awesome'
 // //@import 'vendor/tabs/tabs'
