--- a/templates/template-rations.twig
+++ b/templates/template-rations.twig
@@ -2,4 +2,8 @@
 
 {% block content %}
 	{% include 'rations/section-1.twig' %}
+	{% include 'rations/section-2.twig' %}
+	{% include 'rations/section-3.twig' %}
+	{% include 'rations/section-4.twig' %}
+	{% include 'rations/section-5.twig' %}
 {% endblock %}
