--- a/static/src/sass/components/_icon.sass
+++ b/static/src/sass/components/_icon.sass
@@ -9,16 +9,17 @@
 
 		+min($sm)
 			height: 100%
+
+	&_center
+		text-align: center
 	
 	&_center &
 		
 		&__header
-			text-align: center
 			margin-bottom: 15px
 		
 		&__title
 			margin-bottom: 15px
-			text-align: center
 
 		&__image
 			height: 100px
