--- a/static/src/sass/components/_ration.sass
+++ b/static/src/sass/components/_ration.sass
@@ -18,13 +18,28 @@
 		font-family: $bold
 		font-size: 22px
 		margin-bottom: 10px
+		color: $color-brand-1
 
 		+min($md)
 			font-size: 24px
+
+	&__content
+		padding-right: 30px
+
+	&_shadow &
+
+		&__inner
+			box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15)
+		
 	
-	&_light &__body
-		color: $color-white
-		background-color: transparentize($color-white, 0.75)
+	&_light &
+
+		&__title
+			color: $color-black
+		
+		&__body
+			color: $color-white
+			background-color: transparentize($color-white, 0.75)
 
 	+min($sm)
 
