--- a/static/src/sass/layouts/header/_header.sass
+++ b/static/src/sass/layouts/header/_header.sass
@@ -1,17 +1,26 @@
-$header-title: ('default': 30px, 'xs': 45px, 'sm': 55px, 'md': 65px, 'lg': 75px)
-
-$header-text: ('default': 20px, 'xs': 22px, 'sm': 24px, 'md': 28px)
-
 .header
 	position: relative
 	
-	+m('greeting')
+	&_greeting
+		+margin-y(45px)
+		padding-top: 45px
 		padding-bottom: 45px
+
+	&_simple
+		+margin-y(45px)
+		+min($md)
+			margin-top: 100px
+
+	&_background
+		+padding-y(75px)
+		+min($lg)
+			+padding-y(125px)
 
 	&__title
 		line-height: 1.1
 		font-family: $bold
 		font-size: 30px
+		margin-bottom: 30px
 
 		+min($xs)
 			font-size: 45px
@@ -24,6 +33,18 @@ $header-text: ('default': 20px, 'xs': 22px, 'sm': 24px, 'md': 28px)
 
 		+min($lg)
 			font-size: 75px
+
+	&__subtitle
+		font-weight: normal
+		line-height: 1.1
+		font-size: 20px
+		margin-bottom: 30px
+
+		+min($md)
+			font-size: 25px
+			
+		+min($lg)
+			font-size: 30px
 	
 	&__content
 		position: relative
