--- a/static/src/sass/layouts/nav/_nav-menu.sass
+++ b/static/src/sass/layouts/nav/_nav-menu.sass
@@ -4,7 +4,7 @@
 	+max($md_max)
 		+fixed(56px, null, null, 0)
 		+size(270px, 100%)
-		padding: 0 0 100px 0
+		padding: 25px 0 100px 0
 		z-index: 10
 		overflow-y: auto
 
