--- a/static/src/sass/layouts/nav/_nav.sass
+++ b/static/src/sass/layouts/nav/_nav.sass
@@ -18,5 +18,5 @@
 
 	+min($md)
 		+padding-y(15px)
-		background-color: transparentize($color-white, 0.2)
+		background-color: $color-white
 		box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15)			
