--- a/static/src/sass/style.sass
+++ b/static/src/sass/style.sass
@@ -92,6 +92,10 @@
 // Dish
 @import 'components/dish'
 
+@import 'components/team'
+
+@import 'components/question'
+
 // // hamburger
 @import 'components/hamburger/nav-hamburger'
 @import 'components/hamburger/nav-hamburger-effect-1'
@@ -131,6 +135,11 @@
 @import 'sections/dishes/dishes-prices'
 
 @import 'sections/business-lunch/business-prices'
+
+@import 'sections/post/post'
+
+@import 'sections/contacts/contacts'
+
 
 // //@import 'vendor/fontawesome/font-awesome'
 // //@import 'vendor/tabs/tabs'
