--- a/templates/page-simple/section-1.twig
+++ b/templates/page-simple/section-1.twig
@@ -1,4 +1,4 @@
-<header class="header background background_page-simple" style="background-image: url( {{post.thumbnail.src}} ); ">
+<header class="header header_background background" style="background-image: url( {{post.thumbnail.src}} ); ">
 	<div class="container">
 		<h1 class="header__title">{{post.title}}</h1>
 	</div>
