--- a/templates/template-about.twig
+++ b/templates/template-about.twig
@@ -2,4 +2,6 @@
 
 {% block content %}
 	{% include 'page-simple/section-1.twig' %}
+	{% include 'page-simple/section-2.twig' %}
+	{% include 'about/section-3.twig' %}
 {% endblock %}
