--- a/templates/template-questions.twig
+++ b/templates/template-questions.twig
@@ -2,5 +2,5 @@
 
 {% block content %}
 	{% include 'page-simple/section-1.twig' %}
-	{% include 'page-simple/section-2.twig' %}
+	{% include 'questions/section-2.twig' %}
 {% endblock %}
