--- a/static/src/sass/components/_banner-form.sass
+++ b/static/src/sass/components/_banner-form.sass
@@ -54,7 +54,7 @@ $shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15)
 		+min($md)
 			font-size: 28px
 
-	&__content-elements
+	.form-elements
 		+max($sm_max)
 			.wpcf7-form-control-wrap:not(:last-child)
 				margin-bottom: 15px
