--- a/static/src/sass/components/form/_form.sass
+++ b/static/src/sass/components/form/_form.sass
@@ -28,7 +28,8 @@
 				+size(100%)
 
 
-	input:not([type="submit"])
+	input:not([type="submit"]),
+	textarea
 		+input-default
 		width: 100%
 		border-radius: 30px
