--- a/static/src/sass/layouts/nav/_nav-menu-item.sass
+++ b/static/src/sass/layouts/nav/_nav-menu-item.sass
@@ -14,12 +14,17 @@
 			color: inherit
 			text-decoration: none
 			font-family: $bold
+			line-height: 1
+			+transition
 
 		+max($md_max)
-			margin-bottom: 10px
+			margin-bottom: 5px
 
 			a
-				padding: 10px 15px
+				padding: 15px
+
+			&.current-menu-item a
+				background-color: $color-brand-1
 				color: $color-white
 
 
@@ -35,3 +40,10 @@
 				padding-bottom: 7.5px
 				font-size: 14px
 				+linkEffect3
+
+			&.current-menu-item a
+				&:before
+					width: 100%
+				&:after
+					width: 100%
+					background-color: rgba(0,0,0,0)
