--- a/static/src/sass/sections/front/_pride.sass
+++ b/static/src/sass/sections/front/_pride.sass
@@ -1,5 +1,5 @@
 .pride
-	+padding-y(45px)
+	+margin-y(45px)
 
 	&__row
 		+min($sm)
@@ -16,6 +16,7 @@
 	&__text
 
 		font-size: 20px
+		margin-bottom: 30px
 
 		+min($sm)
 			font-size: 24px
