--- a/static/src/sass/sections/front/_target.sass
+++ b/static/src/sass/sections/front/_target.sass
@@ -1,10 +1,10 @@
 .target
 	position: relative
-	+padding-y(45px)
+	+margin-y(45px)
 	z-index: 1
 
 	+min($sm)
-		+padding-y(60px)
+		+margin-y(60px)
 
 	&__bg
 		+absolute(50%, null, null, 50%)
@@ -21,12 +21,15 @@
 
 		&-inner
 			padding: 30px 15px
-			display: inline-block
+			
 			border-radius: 4px
 			background-color: transparentize($color-white, 0.3)
 			box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15)
 			text-align: left
 			line-height: 1.1
+
+			+min($sm)
+				display: inline-block
 
 			+min($md)
 				padding: 45px 25px
