--- a/templates/business-lunch/section-3.twig
+++ b/templates/business-lunch/section-3.twig
@@ -1,7 +1,7 @@
 <section class="background background_large" style="background-image: url( {{ post.get_field('section_3_background') }} );">
 	<div class="container">
 		<h3 class="title-lg background__title">{{post.get_field('section_3_title')}}</h3>
-		<div class="row background__icons">
+		<div class="row">
 			{% for icon in options.single_ration_section_rations.icons %}
 				<div class="icon-column col-12 col-sm-4">
 					<div class="icon icon_center">
