--- a/templates/page-simple/section-2.twig
+++ b/templates/page-simple/section-2.twig
@@ -1,7 +1,10 @@
 <section class="section">
 	<div class="container">
-		<div class="post">
-			{{post.content}}
+		<article class="post post-type-{{post.post_type}}" id="post-{{post.ID}}">
+			<div class="post-body">
+				{{post.content}}
+			</div>
+		</article>
 		</div>
 	</div>
 </section>
